src/test/ui/suggestions/suggest-trait-items.stderr
error[E0437]: type `Typ` is not a member of trait `Foo`
  --> $DIR/suggest-trait-items.rs:13:5
   |
LL |     type Typ = ();
   |     ^^^^^---^^^^^^
   |     |    |
   |     |    help: did you mean `Type`? (a similarly named associated type)
   |     not a member of trait `Foo`

error[E0407]: method `fooo` is not a member of trait `Foo`
  --> $DIR/suggest-trait-items.rs:17:5
   |
LL |     fn fooo() {}
   |     ^^^----^^^^^
   |     |  |
   |     |  help: did you mean `foo`? (a similarly named associated function)
   |     not a member of trait `Foo`

error[E0407]: method `barr` is not a member of trait `Foo`
  --> $DIR/suggest-trait-items.rs:21:5
   |
LL |     fn barr() {}
   |     ^^^----^^^^^
   |     |  |
   |     |  help: did you mean `bar`? (a similarly named associated function)
   |     not a member of trait `Foo`

error[E0407]: method `quux` is not a member of trait `Foo`
  --> $DIR/suggest-trait-items.rs:25:5
   |
LL |     fn quux() {}
   |     ^^^----^^^^^
   |     |  |
   |     |  help: did you mean `qux`? (a similarly named associated function)
   |     not a member of trait `Foo`

error[E0438]: const `Cnst` is not a member of trait `Bar`
  --> $DIR/suggest-trait-items.rs:42:5
   |
LL |     const Cnst: i32 = 0;
   |     ^^^^^^----^^^^^^^^^^
   |     |     |
   |     |     help: did you mean `Const`? (a similarly named associated constant)
   |     not a member of trait `Bar`

error[E0046]: not all trait items implemented, missing: `Type`, `foo`, `bar`, `qux`
  --> $DIR/suggest-trait-items.rs:11:1
   |
LL |     type Type;
   |     ---------- `Type` from trait
LL | 
LL |     fn foo();
   |     --------- `foo` from trait
LL |     fn bar();
   |     --------- `bar` from trait
LL |     fn qux();
   |     --------- `qux` from trait
...
LL | impl Foo for A {
   | ^^^^^^^^^^^^^^ missing `Type`, `foo`, `bar`, `qux` in implementation

error[E0046]: not all trait items implemented, missing: `Const`
  --> $DIR/suggest-trait-items.rs:40:1
   |
LL |     const Const: i32;
   |     ----------------- `Const` from trait
...
LL | impl Bar for B {
   | ^^^^^^^^^^^^^^ missing `Const` in implementation

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0046, E0407, E0437, E0438.
For more information about an error, try `rustc --explain E0046`.
